# cplus_console_cmake_median

./: .gitignore  CMakeLists.txt  README.md  build.bash  config.toml  specs.md
path/to/input_dir/: btcusdt_level_2024.csv  btcusdt_trade_2024.csv
path/to/output_dir/: result.csv
src/: config_parser.hpp  csv_reader.hpp  generate.hpp  main.cpp  median_calculator.hpp  model_program_options.hpp
trade/: btcusdt_trade_2024.csv
